# poor-pauls-benchmark

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  my_results.jsonl  ppb.py  ppb_answer_quality.py  ppb_context_rot.py  ppb_mcp_ground_truth.json  ppb_multiturn.py  ppb_tool_accuracy.py  pyproject.toml  requirements.txt  sweep.example.toml
.github/workflows/: ci.yml
backups/backup/: Qwen3.5-0.8B-Q8_0_20260309_2358.csv  Qwen3.5-27B_20260314_0412.csv  (+9 more)
backups/backup-0329/: Qwen3.5-0.8B-Q8_0_20260309_2358.csv  Qwen3.5-0.8B-Q8_0_20260309_2358.jsonl  Qwen3.5-27B_20260312_1515.csv  Qwen3.5-27B_20260312_1515.jsonl  Qwen3.5-27B_20260313_1308.csv  Qwen3.5-27B_20260313_1308.jsonl  Qwen3.5-27B_20260314_0412.csv  Qwen3.5-27B_20260328_0640.csv  Qwen3.5-27B_20260328_0640.jsonl  Qwen3.5-2B_20260311_2201.csv  Qwen3.5-2B_20260311_2201.jsonl  Qwen3.5-2B_20260311_2202.csv  Qwen3.5-2B_20260311_2202.jsonl  Qwen3.5-2B_20260315_0156.csv  Qwen3.5-4B_20260316_2328.csv  Qwen3.5-9B_20260309_2319.csv  Qwen3.5-9B_20260309_2319.jsonl  Qwen3.5-9B_20260320_1649.csv  Qwen3.5-9B_20260320_1649.jsonl  Qwen3.5-9B_20260323_0240.csv  Qwen3.5-9B_20260323_0240.jsonl  Qwen3.5-9B_20260323_1431.csv  Qwen3.5-9B_20260323_1617.csv  Qwen3.5-9B_20260323_1617.jsonl  Qwen3.5-9B_20260326_2315.csv  Qwen3.5-9B_20260326_2315.jsonl  Qwen3.5-9B_20260327_1205.csv  Qwen3.5-9B_20260327_1205.jsonl  Qwen3.5-9B_20260327_2204.csv  Qwen3.5-9B_20260327_2204.jsonl  article_27B_concurrency_ceiling.md
datasets/: __init__.py  sharegpt.py
docs/: building-llama-cpp.md  llms.txt  qualitative-methodology.md  schema.md
poor-pauls-benchmark/: README.md  ppb.py  pyproject.toml  requirements.txt
ppb_datasets/: .gitignore  __init__.py
results/: .gitignore
runners/: __init__.py  _server_mixin.py  base.py  llama_bench.py  llama_server.py  llama_server_loadtest.py
scripts/: dataset_card.md  download_hf_dataset.py  migrate_schema.py
suites/: .gitignore  qualitative_example.toml  suite.example.toml
tests/: conftest.py  test_config.py  test_context_rot.py  test_flattener.py  test_gguf_metadata.py  test_llama_server.py  test_llama_server_loadtest.py  test_multiturn.py  test_orchestration.py  test_qualitative_fixes.py  test_runners.py  test_tool_accuracy.py
utils/: flattener.py  gguf_metadata.py  publisher.py
(+321 files in other folders)
