[project]
name = "poor-pauls-benchmark"
version = "0.1.0"
description = "Automated evaluation framework for local LLM inference using llama.cpp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "huggingface_hub>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "nvidia-ml-py>=12.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ppb = "ppb:app"

[dependency-groups]
dev = ["pytest>=8.0.0"]
