[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poor-pauls-benchmark"
version = "0.1.0"
description = "Automated evaluation framework for local LLM inference using llama.cpp"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "huggingface_hub>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "nvidia-ml-py>=12.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ppb = "ppb:app"

[tool.hatch.build.targets.wheel]
packages = ["runners", "utils", "ppb_datasets"]
include = ["ppb.py"]

[project.optional-dependencies]
# Optional: qualitative context-rot evaluation.
#
# llama-cpp-python requires a C++ build step.  A plain `pip install`
# will compile a CPU-only binary.  For GPU-accelerated inference (required
# for meaningful benchmark numbers) you must pass build flags:
#
#   CUDA (Linux/Windows):
#     CMAKE_ARGS="-DGGML_CUDA=on" pip install llama-cpp-python
#
#   Metal (macOS Apple Silicon):
#     CMAKE_ARGS="-DGGML_METAL=on" pip install llama-cpp-python
#
#   Or install a pre-built wheel from https://github.com/abetlen/llama-cpp-python/releases
#
# With uv (recommended):
#   uv pip install llama-cpp-python --extra-index-url \
#     https://abetlen.github.io/llama-cpp-python/whl/cu124  # CUDA 12.4 example
qualitative = [
    "llama-cpp-python>=0.3.0",
    "datasets>=2.0.0",   # HuggingFace datasets library for BFCL loading
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.5", "hatchling"]
